Revert "Fixed overflowing labels multiselect field."
This reverts commit 28edc165d7f4b83453f572f48e3ffc0cbdf4906a.

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -1872,10 +1872,6 @@
   .select .chosen-container {
     font-size: inherit;
   }
-  .select .chosen-container-multi {
-    width: 100%!important;
-  }
-
   .select .chosen-container-multi .chosen-choices {
     background: #fff;
     border: 0;
